tests/negative/neg_pr118c_shift_on_integer.safe
package neg_pr118c_shift_on_integer

   value : integer = 1 << 1

